[package]
name = "jito-shredstream-client"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
jito-protos = { path = "./jito_protos" }
solana-entry = "=2.2.1"
solana-sdk = "=2.2.1"
solana-program = "=2.2.1"
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
borsh = "1.2.1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
