[package]
name = "jito-shredstream-client"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
jito-protos = { path = "jito_protos" }
solana-entry = "1.17.0"
solana-sdk = "1.17.0"
solana-program = "1.17.0"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
chrono = "0.4.31"
borsh = "1.2.1"
tonic = { version = "0.10", features = ["tls", "tls-roots", "tls-webpki-roots"] }
tracing = "0.1"
tracing-subscriber = "0.3"
