[package]
name = "jito-shredstream-client"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
jito-protos = { path = "src/jito_protos" }
solana-entry = "1.17.0"
solana-sdk = "1.17.0"
solana-program = "1.18.26"
tokio = { version = "1.0", features = ["full"] }
bincode = "1.3.3"
chrono = "0.4.31"
borsh = "1.2.1"
tonic = "0.10.2"
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4.3"
prost = "0.12.1"
prost-types = "0.12.1"
futures-util = "0.3.28"
