[package]
name = "jito-protos"
version = "0.1.0"
description = "Protobufs for working with block engine"
authors = ["Jito Team <team@jito.wtf>"]
homepage = "https://jito.wtf/"
edition = "2021"
publish = false

[dependencies]
tonic = "0.10.2"
prost = "0.12.1"
prost-types = "0.12.1"

[build-dependencies]
tonic-build = "0.10.2"
protobuf-src = "1"

[features]
default = []
